-----------------------------------------------------------------------------
#                                                                           #
#                                                                           #
#                                  Changelog                                #
#                                                                           #
#                                                                           #
-----------------------------------------------------------------------------

v0.001:
-Implemented basic graphics module
-Improved Documentation

-Some code cleanup
-Added basic Camera Class

-Some cleanup
-Added basic Map generation and rendering
-Some cleanup
-Added basic Timer, fps locking counting and locking, text rendering

-Some minor changes how Textures are handled
-Some cleanup
-Added basic controls class
-Added unsmoothed camera movement (mostly framerate independent)
-Minor bugfixes

-Lots of entity handling, tree generation and drawing, enum def cleanup (hopefully)
-Tree positioning, basic dynamic spawning, some fixes

-Drawing changes, Day Night Sky cycle

-Color modulation for entities, time
-Basic zone assigning for entities
-Multiline textrendering added

-Debugging output, some zone handling
-Fixed major performance hog caused by debug string updating

TODO: controls handling, some cleanup