@@ -1,0 +1,26 @@
+
+namespace AnimalEnumeration
+{
+	typedef enum ANIMAL_STATE
+	{
+		ANIMAL_UNBORN = 0,
+		ANIMAL_BORN_SMALL,
+		ANIMAL_BORN,
+		ANIMAL_FULL_SIZE_1,
+		ANIMAL_FULL_SIZE_2,
+		ANIMAL_FULL_SIZE_3,
+		ANIMAL_DEAD,
+		ANIMAL_DISAPPEARED,
+		ANIMAL_STATE_TOTAL
+	};
+
+	typedef enum ANIMAL_GROWTH_RATE
+	{
+		ANIMAL_GROWTH_RATE_UNBORN_TO_BORN_SMALL = 100,
+		ANIMAL_GROWTH_RATE_BORN_SMALL_TO_BORN = 200,
+		ANIMAL_GROWTH_RATE_BORN_TO_FULL_SIZE = 300,
+		ANIMAL_GROWTH_RATE_FULL_SIZE_TO_DEATH_AVERAGE = 500,
+		ANIMAL_GROWTH_RATE_DEATH_TO_DISAPPEAR=100
+	};
+}
+
