@@ -1,5 +1,4 @@
 //This class controls all entity actions
-
 #include <iterator>
 #include <stdio.h>
 #include <algorithm>
@@ -11,7 +10,8 @@
 #include "EntityControl.h"
 #include "EntityZone.h"
 #include "Text.h"
-
+#include "Tree.h"
+#include "Animal.h"
 
 //Constructor
 EntityControl::EntityControl(Map* map, Graphics* graphics, World* world)
@@ -38,6 +38,7 @@ EntityControl::EntityControl(Map* map, Graphics* graphics, World* world)
 EntityControl::~EntityControl()
 {
 	std::vector<Entity*>::iterator entityIterator;
+
 	//Iterate over all entity elements and proceed
 	for (entityIterator = entities.begin(); entityIterator != entities.end(); entityIterator++)
 	{
@@ -49,7 +50,7 @@ EntityControl::~EntityControl()
 
 }
 
-//Add a new entity at the end of the entities vector
+//Add a new entity at the end of the entities vector, returns if successful
 bool EntityControl::addNewEntity(Entity* entity)
 {
 	//Entity addable?
@@ -73,6 +74,7 @@ void EntityControl::entityInteraction(int framerate)
 	Entity* currentEntity;
 	//-----------------------Entity Handling-------------------------------//
 
+	animalsHandling(); //Spawn more chicken
 	vegetationHandling(); //Spawn more trees
 
 	//-----------------Entity Removal and rendering------------------------//
@@ -109,21 +111,14 @@ void EntityControl::entityInteraction(int framerate)
 	}
 }
 
-//Handles collisions of an entity with the map
-void EntityControl::collisionsMap(Entity* entity)
-{
-	/*
-	TODO
-	*/
-}
-
 //Spawns a tree, returns pointer if successful, NULL otherwise
 //TODO optimize and make more simple
 Tree* EntityControl::spawnTree(int tileX, int tileY, bool seeded)
 {
 	int xPos = tileX*(map->MAP_TILE_WIDTH_HEIGHT) - 24;
 	int yPos = ((map->getMapHeight() - 1) - tileY)*map->MAP_TILE_WIDTH_HEIGHT - 56;
-	Tree* spawnedTree = new Tree(xPos, yPos, graphics, graphics->getTextures(TexturesEnumeration::TEXTURE_TREE), &TREE_FRAMECOUNT, &TREE_FRAME_WIDTH, &TREE_FRAME_HEIGHT, world, seeded, ++idCounter);
+	Tree* spawnedTree = new Tree(xPos, yPos, TREE_WEIGHT, graphics, graphics->getTextures(TexturesEnumeration::TEXTURE_TREE), &TREE_FRAMECOUNT, &TREE_FRAME_WIDTH, &TREE_FRAME_HEIGHT, world, seeded, ++idCounter);
+	
 	//return if successful
 	if (addNewEntity(spawnedTree))
 	{
@@ -134,16 +129,45 @@ Tree* EntityControl::spawnTree(int tileX, int tileY, bool seeded)
 		delete spawnedTree; //deallocate the now useless object
 		return NULL;
 	}
-
 }
 
-//Handles vegetation growth and death on the map
+//Spawns a animal, returns pointer if successful, NULL otherwise
+Animal* EntityControl::spawnAnimal(int tileX, int tileY, bool born)
+{
+	int xPos = tileX*(map->MAP_TILE_WIDTH_HEIGHT) - 24;
+	int yPos = ((map->getMapHeight() - 1) - tileY)*map->MAP_TILE_WIDTH_HEIGHT - 56;
+	Animal* spawnedAnimal = new Animal(xPos, yPos, CHICKEN_WEIGHT, graphics, graphics->getTextures(TexturesEnumeration::TEXTURE_CHICKEN), &CHICKEN_FRAMECOUNT, &CHICKEN_FRAME_WIDTH, &CHICKEN_FRAME_HEIGHT, world, born, ++idCounter);
+	
+	//return if successful
+	if (addNewEntity(spawnedAnimal))
+	{
+		return spawnedAnimal;
+	}
+	else
+	{
+		delete spawnedAnimal; //deallocate the now useless object
+		return NULL;
+	}
+}
+
+
+//Handles vegetation growth/spawning
 void EntityControl::vegetationHandling()
 {
-	if (entities.size() < MAX_TREES)
+	if (entities.size() < MAX_ENTITIES)
 	{
 		int randomTreePosX = Functions::generateRandomNumber(0, map->getMapWidth() - 1);
 		spawnTree(randomTreePosX, map->getHeightSegment(randomTreePosX), true);
+	}
+}
+
+//Handles animal spawning
+void EntityControl::animalsHandling()
+{
+	if (entities.size() < MAX_ENTITIES)
+	{
+		int randomAnimalPosX = Functions::generateRandomNumber(0, map->getMapWidth() - 1);
+		spawnAnimal(randomAnimalPosX, map->getHeightSegment(randomAnimalPosX), true);
 	}
 }
 
@@ -181,4 +205,6 @@ void EntityControl::renderDebugText(Entity* entity)
 {
 	//Run over all entities
 	graphics->drawRenderable(entity->getDebugText(), true);
+
+
 }
