@@ -1,0 +1,10 @@
+//This namespace handles structs of entities
+namespace EntityStruct
+{
+	typedef struct entityForces
+	{
+		double x;
+		double y;
+		int weight;
+	};
+}
